# Patience

./: Opmerkingen.txt  patience.cabal  stack.yaml
lib/: DataStructures.hs  Logica.hs
src/: Main.hs
test/: PatienceTests.hs
